# simple-crud-app

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 59ae8eb39620_create_user_profiles_table.py  77fd32f340d3_user_profiles_email_uniq_index.py
app/: config.py  database.py  dependencies.py  main.py
app/models/: user_profile.py
app/routers/: user_profile.py
app/schemas/: user_profile.py
app/storage/: user_profile.py
app/tests/: conftest.py
app/tests/routers/: __init__.py  test_user_profile.py
app/tests/storage/: conftest.py  test_user_profile.py
