[tool.poetry]
name = "simple_crud_app"
version = "0.1.0"
description = ""
authors = ["Denis Zvyagintsev <dizvyagintsev@avito.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
coverage = "^6.4.2"
certifi = "^2022.6.15"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
requests = "^2.28.1"
pylint = "^2.14.5"
black = "^22.6.0"
mypy = "^0.961"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
